{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 245,
  "lineage": "75bc1b1e-f342-18f8-983d-4b5bf26ef1f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:680218427961:loadbalancer/my-elb-default",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "my-elb-default-1615945927.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb-default",
            "idle_timeout": 400,
            "instances": [
              "i-071bbe7edeb07154f",
              "i-0fb380dc2b91743fb"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb-default",
            "security_groups": [
              "sg-0f3e52fb16d35656d"
            ],
            "source_security_group": "680218427961/elb_sg",
            "source_security_group_id": "sg-0f3e52fb16d35656d",
            "subnets": [
              "subnet-011d191fd5f8ca037",
              "subnet-068f33e1d237d9c9b",
              "subnet-07cd23fb98948739d"
            ],
            "tags": {
              "Name": "main-ebl-default"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.mykeypair",
            "aws_security_group.elb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06817f01dcc7f30be",
            "arn": "arn:aws:ec2:us-east-2:680218427961:instance/i-020546f191a3c9250",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020546f191a3c9250",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04eff4c80fe59d5a6",
            "private_dns": "ip-10-0-0-202.us-east-2.compute.internal",
            "private_ip": "10.0.0.202",
            "public_dns": "ec2-3-22-66-21.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.66.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03bc8f502972f6ca1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-068f33e1d237d9c9b",
            "tags": {
              "Name": "MainNat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c42e0b2bf73622c1"
            ]
          },
          "dependencies": [
            "aws_security_group.nat_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b0c55eeae6d5096",
            "arn": "arn:aws:ec2:us-east-2:680218427961:instance/i-0fb380dc2b91743fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb380dc2b91743fb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0258543ea1699f3b8",
            "private_dns": "ip-10-0-0-75.us-east-2.compute.internal",
            "private_ip": "10.0.0.75",
            "public_dns": "ec2-3-12-146-216.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.146.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-091d910652e7dc811",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068f33e1d237d9c9b",
            "tags": {
              "Environment": "default",
              "Name": "Webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e0c27b3d45218a0a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b0c55eeae6d5096",
            "arn": "arn:aws:ec2:us-east-2:680218427961:instance/i-071bbe7edeb07154f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071bbe7edeb07154f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b1e64c1cd44f741",
            "private_dns": "ip-10-0-1-148.us-east-2.compute.internal",
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-3-14-66-146.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.66.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d6334ff072d2b389",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011d191fd5f8ca037",
            "tags": {
              "Environment": "default",
              "Name": "Webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e0c27b3d45218a0a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:internet-gateway/igw-04d4a88e986cc5fef",
            "id": "igw-04d4a88e986cc5fef",
            "owner_id": "680218427961",
            "tags": {
              "Name": "mainIgw"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02c31a989b02ae81d",
            "owner_id": "680218427961",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-020546f191a3c9250",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-04eff4c80fe59d5a6",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mainPrivateRT"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0247eb58f3ec1a81c",
            "owner_id": "680218427961",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d4a88e986cc5fef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mainPRT"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018411e5a5e4eda71",
            "route_table_id": "rtb-02c31a989b02ae81d",
            "subnet_id": "subnet-0711e2825f6e122ea"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.privatert",
            "aws_security_group.nat_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb37e016663ebaaa",
            "route_table_id": "rtb-02c31a989b02ae81d",
            "subnet_id": "subnet-0437266cc270bcee2"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.privatert",
            "aws_security_group.nat_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07491da0984a08ae4",
            "route_table_id": "rtb-02c31a989b02ae81d",
            "subnet_id": "subnet-0bfdffe56dd200113"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.privatert",
            "aws_security_group.nat_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a68b7013fcb025d",
            "route_table_id": "rtb-0247eb58f3ec1a81c",
            "subnet_id": "subnet-068f33e1d237d9c9b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.prt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0441465472f1c4798",
            "route_table_id": "rtb-0247eb58f3ec1a81c",
            "subnet_id": "subnet-011d191fd5f8ca037"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.prt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e45014bb3b5b75cc",
            "route_table_id": "rtb-0247eb58f3ec1a81c",
            "subnet_id": "subnet-07cd23fb98948739d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.prt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:security-group/sg-02d4ecc9aade185db",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d4ecc9aade185db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "680218427961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:security-group/sg-0f3e52fb16d35656d",
            "description": "Allow traffic for web apps",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3e52fb16d35656d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "680218427961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:security-group/sg-0c42e0b2bf73622c1",
            "description": "Allow traffic for Pricate Subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c42e0b2bf73622c1",
            "ingress": [],
            "name": "nat_sg",
            "name_prefix": "",
            "owner_id": "680218427961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:security-group/sg-0e0c27b3d45218a0a",
            "description": "Allow traffic for Public Subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0c27b3d45218a0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "680218427961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:subnet/subnet-0711e2825f6e122ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0711e2825f6e122ea",
            "map_public_ip_on_launch": false,
            "owner_id": "680218427961",
            "tags": {
              "Name": "PrivateSubnet-1"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:subnet/subnet-0437266cc270bcee2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0437266cc270bcee2",
            "map_public_ip_on_launch": false,
            "owner_id": "680218427961",
            "tags": {
              "Name": "PrivateSubnet-2"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:subnet/subnet-0bfdffe56dd200113",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0bfdffe56dd200113",
            "map_public_ip_on_launch": false,
            "owner_id": "680218427961",
            "tags": {
              "Name": "PrivateSubnet-3"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:subnet/subnet-068f33e1d237d9c9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-068f33e1d237d9c9b",
            "map_public_ip_on_launch": true,
            "owner_id": "680218427961",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:subnet/subnet-011d191fd5f8ca037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-011d191fd5f8ca037",
            "map_public_ip_on_launch": true,
            "owner_id": "680218427961",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:subnet/subnet-07cd23fb98948739d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07cd23fb98948739d",
            "map_public_ip_on_launch": true,
            "owner_id": "680218427961",
            "tags": {
              "Name": "PublicSubnet-3"
            },
            "vpc_id": "vpc-01d00fa5409b87dc1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:680218427961:vpc/vpc-01d00fa5409b87dc1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053d51ef02f024ca8",
            "default_route_table_id": "rtb-09d79b609b7afb324",
            "default_security_group_id": "sg-0e5caf0e199a90390",
            "dhcp_options_id": "dopt-c7f60dac",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01d00fa5409b87dc1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d79b609b7afb324",
            "owner_id": "680218427961",
            "tags": {
              "Environment": "default",
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}